@@ -1,3 +1,7 @@
+1997-11-06  dickey@clark.net
+
+	* src/newpath/newpath.c: add -f option to accommodate Java $CLASSPATH
+
 1997-09-06  Thomas E. Dickey  <dickey@clark.net>
 
 	* src/acsplit/acmerge.c: better test for comment.
